# live-translation

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  build-installer.ps1  build-installer.sh  build.ps1  list_input_devices.py  list_languages.py  live-translation.spec  pyproject.toml  translate.py
.github/workflows/: tests.yml
.pyinstaller/: hook-opuslib.py  hook-pyaudio.py  hook-pymumble_py3.py
docs/: AwsSetup.md  BuildTroubleshooting.md  GoogleSetup.md  MumbleSetup.md
img/: live-translation-app.icns
installer/windows/: installer.nsi
lib/mumble/: API.md  README.md  TODO  pyproject.toml  setup.py
lib/mumble/examples/: audio-only_client.py  echobot.py  music_bot.py  talking_bot.py
lib/mumble/pymumble.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/mumble/pymumble_py3/: constants.py  mumble.py  soundoutput.py  users.py
lib/mumble/src/pymumble_py3/: acl.py  blobs.py  callbacks.py  channels.py  commands.py  constants.py  crypto.py  messages.py  mumble.py  mumble_pb2.py  soundoutput.py  soundqueue.py  test_crypto.py  tools.py  users.py
lib/py-opuslib/: README.md  pyproject.toml  setup.py
lib/py-opuslib/opuslib/: __init__.py  classes.py  constants.py
lib/py-opuslib/opuslib.egg-info/: PKG-INFO  SOURCES.txt
lib/py-opuslib/opuslib/api/: __init__.py  ctl.py  decoder.py  encoder.py  multistream_decoder.py  multistream_encoder.py  projection_decoder.py  projection_encoder.py
lib/py-opuslib/src/opuslib/: classes.py  exceptions.py
lib/py-opuslib/src/opuslib/api/: __init__.py  ctl.py  decoder.py  encoder.py  multistream_decoder.py  multistream_encoder.py  projection_decoder.py  projection_encoder.py
lib/py-opuslib/tests/: decoder.py  encoder.py  hl_decoder.py  hl_encoder.py
res/: config.json
src/: constants.py  gui.py  main.py  main_window.py  translation.py
src/config/: config_manager.py
src/config/model/: config_models.py
src/controllers/: mumble_channel_manager.py  mumble_server_controller.py  translation_controller.py
src/gui_elements/: about_dialog.py  audio_input_widget.py  audio_output_widget.py  aws_widget.py  base_translator_widget.py  google_widget.py  live_output_widget.py  mumble_widget.py  speaker_widget.py  text_edit_logger.py  translator_widget.py
src/helper/: list_devices.py  list_input_devices.py  list_languages.py  test_pyaudio.py
src/sound_inputs/: microphone.py
src/sound_outputs/: mumble.py  mumble_installer.py  speaker.py
src/styles/: dark_theme.qss  light_theme.qss
src/translators/: aws_translator.py  google_translator.py  translation_callbacks.py
src/utils/: language_names.py  mumble_certs.py  mumble_paths.py  qt_worker.py  version.py  windows_firewall.py
tests/: conftest.py  stubs.py  test_aws_translator.py  test_config_manager.py  test_google_translator.py  test_live_output_widget.py  test_logging_setup.py  test_microphone.py  test_mumble.py  test_mumble_certs.py  test_mumble_channel_manager.py  test_mumble_installer.py  test_mumble_server_controller.py  test_speaker.py  test_translation.py  test_translation_controller.py  test_translator_widget.py  test_version.py  test_windows_firewall.py
