[project]
name = "live-translation"
version = "1.0.0"
requires-python = ">=3.14"
description = "Live translation application"
authors = [{name = "Raimund Hummel"}, {name = "Matthias Kuczera"}]
dependencies = [
    "pymumble",
    "opuslib",
    "pyaudio~=0.2",
    "boto3~=1.40",
    "PySide6~=6.9",
    "amazon-transcribe~=0.6",
    "protobuf ~= 6.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pyinstaller",
    "botocore~=1.40",
    "types-boto3-polly~=1.40",
    "types-boto3-translate~=1.40",
    "ruff",
]

[tool.uv.sources]
"opuslib" = {workspace = true}
"pymumble" = {workspace = true}

[tool.uv.workspace]
members = ["lib/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
exclude = [
    "lib"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    # Ignore specific rules
]
select = [
    "E",    # pycodestyle (Style errors)
    "F",    # Pyflakes (Logic and syntax errors)
    "B",    # flake8-bugbear (error detection)
    "SIM",  # flake8-simplify (Simplification suggestions)
    "I",    # isort (Import sorting)
    "Q"     # flake8-quotes (Quote style)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.mypy]
python_version = "3.14"
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-rf --strict --durations 10 --cov-config .coveragerc --color yes"
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s (%(filename)s:%(lineno)s) %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "webtest: mark a test as a webtest."
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning"
]
junit_family = "xunit2"
