[project]
name = "live-translation"
version = "1.1.0"
requires-python = ">=3.14"
description = "Live translation application"
authors = [{name = "Matthias Kuczera"}, {name = "Raimund Hummel"},]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "pymumble",
    "opuslib",
    "pyaudio~=0.2",
    "boto3~=1.40",
    "PySide6~=6.9",
    "amazon-transcribe~=0.6",
    "protobuf ~= 6.0",
    "google-cloud-speech~=2.26",
    "google-cloud-translate~=3.14",
    "google-cloud-texttospeech~=2.15",
]

[dependency-groups]
dev = [
    "mypy~=2.1",
    "pyinstaller~=6.21",
    "botocore~=1.40",
    "types-boto3-polly~=1.40",
    "types-boto3-translate~=1.40",
    "ruff~=0.15",
    "pytest~=9.0",
    "pytest-cov~=7.0",
]

[tool.uv.sources]
"opuslib" = {workspace = true}
"pymumble" = {workspace = true}

[tool.uv.workspace]
members = ["lib/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 120
exclude = [
    "lib"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    # Ignore specific rules
]
select = [
    "E",    # pycodestyle (Style errors)
    "F",    # Pyflakes (Logic and syntax errors)
    "B",    # flake8-bugbear (error detection)
    "SIM",  # flake8-simplify (Simplification suggestions)
    "I",    # isort (Import sorting)
    "Q"     # flake8-quotes (Quote style)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.mypy]
python_version = "3.14"
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-rf --strict --durations 10 --color yes"
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s (%(filename)s:%(lineno)s) %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "webtest: mark a test as a webtest."
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::RuntimeWarning",
    "ignore:Exception ignored while finalizing coroutine:pytest.PytestUnraisableExceptionWarning"
]
junit_family = "xunit2"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/gui_elements/*",
    "src/main.py",
    "src/main_window.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = []
