[project]
name = "opuslib"
version = "3.0.4"
requires-python = ">=3.14"
authors = [{ name = "Никита Кузнецов" }]
description = "Python bindings to the libopus, IETF low-delay audio codec"
dependencies = [
]

[tool.uv.build-backend]
module-name = "opuslib"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"
